<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.SingleItemActivity">

        <ImageView
            android:id="@+id/single_movie_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/single_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/single_movie_release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_year"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/single_movie_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/single_movie_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/single_movie_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="15sp"
            android:textColor="#999999"/>
    </LinearLayout>
</ScrollView>