<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#B9090B"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/nav_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:contentDescription="@string/roulette_icon"
            android:src="@drawable/icon_small" />

        <TextView
            android:id="@+id/nav_text_mainInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nav_image"
            android:text="@string/netflix_roulette_client"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/nav_text_subinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_roman_leizerovych"
            android:layout_below="@id/nav_text_mainInfo"/>
    </RelativeLayout>
</LinearLayout>
